--- a/Earth.html
+++ b/Earth.html
@@ -12,126 +12,126 @@
   </head>
   
   <body>
-    <!-- <img src="img/bg.jpg" class="bg" alt=""> -->
     <div class="off-canvas-wrap">
     <div class="inner-wrap">
-      <nav class="tab-bar">
-        <section class="left-small">
-          <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-        </section>
+		<nav class="tab-bar">
+			<section class="left-small">
+			  <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+			</section>
 
-        <section class="right tab-bar-section">
-          <a href="index.html"><img class="logofull"  src="img/logofull.png"  alt=""></a>
-        </section>
-      </nav>
-    <aside class="left-off-canvas-menu">
-      <ul id="navlist" class="off-canvas-list">
-      <a href="earth.html"><li><img src="img/earth.jpg" alt="" class="cover"></li></a>
-      <a href="people.html"><li><img src="img/people.jpg" alt="" class="cover"></li></a>
-      <a href="culture.html"><li><img src="img/culture.jpg" alt="" class="cover"></li></a>
-      <a href="contents.html"><li><img src="img/contents.jpg" alt="" class="cover"></li></a>
-      </ul>
-    </aside>
+			<section class="right tab-bar-section">
+			  <a href="index.html"><img class="logofull"  src="img/logofull.png"  alt=""></a>
+			</section>
+		  </nav>
+		<aside class="left-off-canvas-menu">
+		  <ul id="navlist" class="off-canvas-list">
+		  <a href="earth.html"><li><img src="img/earth.jpg" alt="" class="cover"></li></a>
+		  <a href="people.html"><li><img src="img/people.jpg" alt="" class="cover"></li></a>
+		  <a href="culture.html"><li><img src="img/culture.jpg" alt="" class="cover"></li></a>
+		  <a href="contents.html"><li><img src="img/contents.jpg" alt="" class="cover"></li></a>
+		  </ul>
+		</aside>
 
-      <section class="container" data-offcanvas>
+	<section class="container" data-offcanvas>
         <div class="row">
           <div class="large-12 medium-12 small-12 columns">
           <h1>CONTOUR<span class="headingbold">EARTH</span></h1>
           </div>
         </div>
-        <div id="intro" class="flowleft hide-for-small-only">
-      <div class="large-4 medium-4 small-12 columns">
-        <img class="coverarticle" alt="" src="img/earth.jpg">
-         <!-- <p class="coverintro">As the world’s population continues to grow and there is more and more pressure on the planets finite resources our generation needs to reimagine a new way of living. This issue explores how we can make that change.</p> -->
-      </div>
-      <span class="">
-      <div class="large-8 medium-8 small-8 columns hide-for-small-only">
-      <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Earth-Stephanie-Tenaglia.html"><img class="article" alt="" src="img/_earth/crop/Stephanie-Tenaglia.jpg">
-            <p class="articletopic">Destinations</p>
-            <p class="articlename"><i>By Stephanie Tenaglia</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-         <a href="Earth-Thilini-Wellappuli.html"><img class="article" alt="" src="img/_earth/crop/Thilini-Wellappuli.jpg">
-            <p class="articletopic">Environment</p>
-            <p class="articlename"><i>By Thilini Wellappuli</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Earth-Kate-Vietze.html"><img class="article" alt="" src="img/_earth/crop/Kate-Vietze.jpg">
-            <p class="articletopic">Holidays</p>
-            <p class="articlename"><i>By Kate Vietze</i></p>
-          </a>
-        </div>
-        <div class="row">
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Earth-Gillian-Ferri.html"><img class="article" alt="" src="img/_earth/crop/Gillian-Ferri.jpg">
-            <p class="articletopic">Food Culture</p>
-            <p class="articlename"><i>By Gillian Ferri</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Earth-Bernadette-Kentwell.html"><img class="article" alt="" src="img/_earth/crop/Bernadette-Kentwell.jpg">
-            <p class="articletopic">Language</p>
-            <p class="articlename"><i>By Bernadette Kentwell</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Earth-Ashley-Percossi.html"><img class="article" alt="" src="img/_earth/crop/Ashley-Percossi.jpg">
-            <p class="articletopic">Travel</p>
-            <p class="articlename"><i>By Ashley Percossi</i></p>
-          </a>
-        </div>
-      </div> <!-- end of 8 col -->
-    </div>
-    </div> <!-- end of row -->
-    <div class="large-12 medium-12 small-12 columns hide-for-medium-up">
-    <div>
-        <img class="coverarticle" alt="" src="img/earth.jpg">
-         <!-- <p class="coverintro">As the world’s population continues to grow and there is more and more pressure on the planets finite resources our generation needs to reimagine a new way of living. This issue explores how we can make that change.</p> -->
-      </div>
-        
-      <div class="large-4 medium-4 small-12 ">
-          <a href="Earth-Stephanie-Tenaglia.html"><img class="article" alt="" src="img/_earth/crop/Stephanie-Tenaglia.jpg">
-            <p class="articletopic">Destinations</p>
-            <p class="articlename"><i>By Stephanie Tenaglia</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 ">
-         <a href="Earth-Thilini-Wellappuli.html"><img class="article" alt="" src="img/_earth/crop/Thilini-Wellappuli.jpg">
-            <p class="articletopic">Environment</p>
-            <p class="articlename"><i>By Thilini Wellappuli</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Earth-Kate-Vietze.html"><img class="article" alt="" src="img/_earth/crop/Kate-Vietze.jpg">
-            <p class="articletopic">Holidays</p>
-            <p class="articlename"><i>By Kate Vietze</i></p>
-          </a>
-        </div>
-        <div class="row">
-        <div class="large-4 medium-4 small-12">
-          <a href="Earth-Gillian-Ferri.html"><img class="article" alt="" src="img/_earth/crop/Gillian-Ferri.jpg">
-            <p class="articletopic"><span>Food Culture</span></p>
-            <p class="articlename"><i>By Gillian Ferri</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Earth-Bernadette-Kentwell.html"><img class="article" alt="" src="img/_earth/crop/Bernadette-Kentwell.jpg">
-            <p class="articletopic">Language</p>
-            <p class="articlename"><i>By Bernadette Kentwell</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Earth-Ashley-Percossi.html"><img class="article" alt="" src="img/_earth/crop/Ashley-Percossi.jpg">
-            <p class="articletopic">Travel</p>
-            <p class="articlename"><i>By Ashley Percossi</i></p>
-          </a>
-        </div>
-      </div> <!-- end of 8 col -->
-      </section>
-
+		<div id="intro" class="flowleft hide-for-small-only">
+			<div class="large-4 medium-4 small-12 columns">
+				<img class="coverarticle" alt="" src="img/earth.jpg">
+			</div>
+			<span class=""></span>
+			<div class="large-8 medium-8 small-8 columns hide-for-small-only">
+				<div class="row">
+					<div class="large-4 medium-4 small-12 columnsarticle">
+					  <a href="Earth-Stephanie-Tenaglia.html"><img class="article" alt="" src="img/_earth/crop/Stephanie-Tenaglia.jpg">
+						<p class="articletopic">Destinations</p>
+						<p class="articlename"><i>By Stephanie Tenaglia</i></p>
+					  </a>
+					</div>
+					<div class="large-4 medium-4 small-12 columnsarticle">
+					 <a href="Earth-Thilini-Wellappuli.html"><img class="article" alt="" src="img/_earth/crop/Thilini-Wellappuli.jpg">
+						<p class="articletopic">Environment</p>
+						<p class="articlename"><i>By Thilini Wellappuli</i></p>
+					  </a>
+					</div>
+					<div class="large-4 medium-4 small-12 columnsarticle">
+					  <a href="Earth-Kate-Vietze.html"><img class="article" alt="" src="img/_earth/crop/Kate-Vietze.jpg">
+						<p class="articletopic">Holidays</p>
+						<p class="articlename"><i>By Kate Vietze</i></p>
+					  </a>
+					</div>
+				</div>
+				<div class="row">
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Earth-Gillian-Ferri.html"><img class="article" alt="" src="img/_earth/crop/Gillian-Ferri.jpg">
+					<p class="articletopic">Food Culture</p>
+					<p class="articlename"><i>By Gillian Ferri</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Earth-Bernadette-Kentwell.html"><img class="article" alt="" src="img/_earth/crop/Bernadette-Kentwell.jpg">
+					<p class="articletopic">Language</p>
+					<p class="articlename"><i>By Bernadette Kentwell</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Earth-Ashley-Percossi.html"><img class="article" alt="" src="img/_earth/crop/Ashley-Percossi.jpg">
+					<p class="articletopic">Travel</p>
+					<p class="articlename"><i>By Ashley Percossi</i></p>
+				  </a>
+				</div>
+			  </div> <!-- end of 8 col -->
+			</div>
+		</div> <!-- end of row -->
+		<div class="large-12 medium-12 small-12 columns hide-for-medium-up">
+			<div>
+				<img class="coverarticle" alt="" src="img/earth.jpg">
+			</div>
+			<div class="row">
+				<div class="large-4 medium-4 small-12 ">
+				  <a href="Earth-Stephanie-Tenaglia.html"><img class="article" alt="" src="img/_earth/crop/Stephanie-Tenaglia.jpg">
+					<p class="articletopic">Destinations</p>
+					<p class="articlename"><i>By Stephanie Tenaglia</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 ">
+				 <a href="Earth-Thilini-Wellappuli.html"><img class="article" alt="" src="img/_earth/crop/Thilini-Wellappuli.jpg">
+					<p class="articletopic">Environment</p>
+					<p class="articlename"><i>By Thilini Wellappuli</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12">
+				  <a href="Earth-Kate-Vietze.html"><img class="article" alt="" src="img/_earth/crop/Kate-Vietze.jpg">
+					<p class="articletopic">Holidays</p>
+					<p class="articlename"><i>By Kate Vietze</i></p>
+				  </a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-4 medium-4 small-12">
+				  <a href="Earth-Gillian-Ferri.html"><img class="article" alt="" src="img/_earth/crop/Gillian-Ferri.jpg">
+					<p class="articletopic"><span>Food Culture</span></p>
+					<p class="articlename"><i>By Gillian Ferri</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12">
+				  <a href="Earth-Bernadette-Kentwell.html"><img class="article" alt="" src="img/_earth/crop/Bernadette-Kentwell.jpg">
+					<p class="articletopic">Language</p>
+					<p class="articlename"><i>By Bernadette Kentwell</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12">
+				  <a href="Earth-Ashley-Percossi.html"><img class="article" alt="" src="img/_earth/crop/Ashley-Percossi.jpg">
+					<p class="articletopic">Travel</p>
+					<p class="articlename"><i>By Ashley Percossi</i></p>
+				  </a>
+				</div>
+		  </div> <!-- end of 8 col -->
+		</div>
+ 	</section>
     
   </div>
 </div>
