--- a/culture.html
+++ b/culture.html
@@ -40,123 +40,125 @@
           </div>
         </div>
         <div id="intro" class="flowleft hide-for-small-only">
-      <div class="large-4 medium-4 small-12 columns">
-        <img class="coverarticle" alt="" src="img/culture.jpg">
-         <!-- <p class="coverintro">As the world’s population continues to grow and there is more and more pressure on the planets finite resources our generation needs to reimagine a new way of living. This issue explores how we can make that change.</p> -->
-      </div>
-      <span class="">
-      <div class="large-8 medium-8 small-8 columns hide-for-small-only">
-      <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Dalyna-Meuansanith.html"><img class="article" alt="" src="img/_culture/crop/Dalyna-Meuansanith.jpg">
-           <p class="articletopic">Architecture</p>
-           <p class="articlename"><i>By Dalyna Meuansanith</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-         <a href="Culture-Chontelle-Frugtniet.html"><img class="article" alt="" src="img/_culture/crop/Chontelle-Frugtniet.jpg">
-          <p class="articletopic">Art</p>
-          <p class="articlename"><i>By Chontelle Frugtniet</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Kyralee-Wylde.html"><img class="article" alt="" src="img/_culture/crop/Kyralee-Wylde.jpg">
-          <p class="articletopic">Music</p>
-          <p class="articlename"><i>By Kyralee Wylde</i></p>
-          </a>
-        </div>
-        <div class="row">
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Julie-Dinh.html"><img class="article" alt="" src="img/_culture/crop/Julie-Dinh.jpg">
-          <p class="articletopic">Fashion</p>
-          <p class="articlename"><i>By Julie Dinh</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Estelle-Vallette.html"><img class="article" alt="" src="img/_culture/crop/Estelle-Vallett.jpg">
-          <p class="articletopic">Theatre</p>
-          <p class="articlename"><i>By Estelle Vallett</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Jacob-Vecchio.html"><img class="article" alt="" src="img/_culture/crop/Jacob-Vecchio.jpg">
-          <p class="articletopic">Design</p>
-          <p class="articlename"><i>By Jacob Vecchio</i></p>
-          </a>
-        </div>
-        <div class="row columns">
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Macey-Radburn.html"><img class="article" alt="" src="img/_culture/crop/Macey-Radburn.jpg">
-            <p class="articletopic">Pop Culture</p>
-            <p class="articlename"><i>By Macey Radburn</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 columnsarticle">
-          <a href="Culture-Aaron-de-Leon.html"><img class="article" alt="" src="img/_culture/crop/Aaron-de-Leon.jpg">
-          <p class="articletopic">Technology</p>
-          <p class="articlename"><i>By Aaron de Leon</i></p>
-          </a>
-        </div>
-      </div>
+		  <div class="large-4 medium-4 small-12 columns">
+			<img class="coverarticle" alt="" src="img/culture.jpg">
+		  </div>
+		  <span class=""></span>
+		  <div class="large-8 medium-8 small-8 columns hide-for-small-only">
+			<div class="row">
+			  <div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Culture-Dalyna-Meuansanith.html"><img class="article" alt="" src="img/_culture/crop/Dalyna-Meuansanith.jpg">
+				   <p class="articletopic">Architecture</p>
+				   <p class="articlename"><i>By Dalyna Meuansanith</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				 <a href="Culture-Chontelle-Frugtniet.html"><img class="article" alt="" src="img/_culture/crop/Chontelle-Frugtniet.jpg">
+				  <p class="articletopic">Art</p>
+				  <p class="articlename"><i>By Chontelle Frugtniet</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Culture-Kyralee-Wylde.html"><img class="article" alt="" src="img/_culture/crop/Kyralee-Wylde.jpg">
+				  <p class="articletopic">Music</p>
+				  <p class="articlename"><i>By Kyralee Wylde</i></p>
+				  </a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Culture-Julie-Dinh.html"><img class="article" alt="" src="img/_culture/crop/Julie-Dinh.jpg">
+				  <p class="articletopic">Fashion</p>
+				  <p class="articlename"><i>By Julie Dinh</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Culture-Estelle-Vallette.html"><img class="article" alt="" src="img/_culture/crop/Estelle-Vallett.jpg">
+				  <p class="articletopic">Theatre</p>
+				  <p class="articlename"><i>By Estelle Vallett</i></p>
+				  </a>
+				</div>
+				<div class="large-4 medium-4 small-12 columnsarticle">
+				  <a href="Culture-Jacob-Vecchio.html"><img class="article" alt="" src="img/_culture/crop/Jacob-Vecchio.jpg">
+				  <p class="articletopic">Design</p>
+				  <p class="articlename"><i>By Jacob Vecchio</i></p>
+				  </a>
+				</div>
+			</div>
+			<div class="row columns">
+			<div class="large-4 medium-4 small-12 columnsarticle">
+			  <a href="Culture-Macey-Radburn.html"><img class="article" alt="" src="img/_culture/crop/Macey-Radburn.jpg">
+				<p class="articletopic">Pop Culture</p>
+				<p class="articlename"><i>By Macey Radburn</i></p>
+			  </a>
+			</div>
+			<div class="large-4 medium-4 small-12 columnsarticle">
+			  <a href="Culture-Aaron-de-Leon.html"><img class="article" alt="" src="img/_culture/crop/Aaron-de-Leon.jpg">
+			  <p class="articletopic">Technology</p>
+			  <p class="articlename"><i>By Aaron de Leon</i></p>
+			  </a>
+			</div>
+		  </div>
+		  </div> <!-- end of 8 col -->
+    	</div><!-- end of row -->
+  		<div class="large-12 medium-12 small-12 columns hide-for-medium-up">
+			<div>
+				<img class="coverarticle" alt="" src="img/culture.jpg">
+			</div>
+			<div class="row">
+				  <div class="large-4 medium-4 small-12 ">
+					  <a href="Culture-Dalyna-Meuansanith.html"><img class="article" alt="" src="img/_culture/crop/Dalyna-Meuansanith.jpg">
+					   <p class="articletopic">Architecture</p>
+					   <p class="articlename"><i>By Dalyna Meuansanith</i></p>
+					  </a>
+					</div>
+					<div class="large-4 medium-4 small-12 ">
+					 <a href="Culture-Chontelle-Frugtniet.html"><img class="article" alt="" src="img/_culture/crop/Chontelle-Frugtniet.jpg">
+					  <p class="articletopic">Art</p>
+					  <p class="articlename"><i>By Chontelle Frugtniet</i></p>
+					  </a>
+					</div>
+					<div class="large-4 medium-4 small-12">
+					  <a href="Culture-Kyralee-Wylde.html"><img class="article" alt="" src="img/_culture/crop/Kyralee-Wylde.jpg">
+					  <p class="articletopic">Music</p>
+					  <p class="articlename"><i>By Kyralee Wylde</i></p>
+					  </a>
+					</div>
+				</div>
+			<div class="row">
+			<div class="large-4 medium-4 small-12">
+			  <a href="Culture-Julie-Dinh.html"><img class="article" alt="" src="img/_culture/crop/Julie-Dinh.jpg">
+			  <p class="articletopic">Fashion</p>
+			  <p class="articlename"><i>By Julie Dinh</i></p>
+			  </a>
+			</div>
+			<div class="large-4 medium-4 small-12">
+			  <a href="Culture-Estelle-Vallette.html"><img class="article" alt="" src="img/_culture/crop/Estelle-Vallett.jpg">
+			  <p class="articletopic">Theatre</p>
+			  <p class="articlename"><i>By Estelle Vallett</i></p>
+			  </a>
+			</div>
+			<div class="large-4 medium-4 small-12">
+			  <a href="Culture-Jacob-Vecchio.html"><img class="article" alt="" src="img/_culture/crop/Jacob-Vecchio.jpg">
+			  <p class="articletopic">Design</p>
+			  <p class="articlename"><i>By Jacob Vecchio</i></p>
+			  </a>
+			</div>
+			<div class="large-4 medium-4 small-12">
+			  <a href="Culture-Macey-Radburn.html"><img class="article" alt="" src="img/_culture/crop/Macey-Radburn.jpg">
+				<p class="articletopic">Pop Culture</p>
+				<p class="articlename"><i>By Macey Radburn</i></p>
+			  </a>
+			</div>
+			<div class="large-4 medium-4 small-12">
+			  <a href="Culture-Aaron-de-Leon.html"><img class="article" alt="" src="img/_culture/crop/Aaron-de-Leon.jpg">
+			  <p class="articletopic">Technology</p>
+			  <p class="articlename"><i>By Aaron de Leon</i></p>
+			  </a>
+			</div>
       </div> <!-- end of 8 col -->
-    </div>
-    </div> <!-- end of row -->
-    <div class="large-12 medium-12 small-12 columns hide-for-medium-up">
-    <div>
-        <img class="coverarticle" alt="" src="img/culture.jpg">
-         <!-- <p class="coverintro">As the world’s population continues to grow and there is more and more pressure on the planets finite resources our generation needs to reimagine a new way of living. This issue explores how we can make that change.</p> -->
-      </div>
-        
-      <div class="large-4 medium-4 small-12 ">
-          <a href="Culture-Dalyna-Meuansanith.html"><img class="article" alt="" src="img/_culture/crop/Dalyna-Meuansanith.jpg">
-           <p class="articletopic">Architecture</p>
-           <p class="articlename"><i>By Dalyna Meuansanith</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12 ">
-         <a href="Culture-Chontelle-Frugtniet.html"><img class="article" alt="" src="img/_culture/crop/Chontelle-Frugtniet.jpg">
-          <p class="articletopic">Art</p>
-          <p class="articlename"><i>By Chontelle Frugtniet</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Kyralee-Wylde.html"><img class="article" alt="" src="img/_culture/crop/Kyralee-Wylde.jpg">
-          <p class="articletopic">Music</p>
-          <p class="articlename"><i>By Kyralee Wylde</i></p>
-          </a>
-        </div>
-        <div class="row">
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Julie-Dinh.html"><img class="article" alt="" src="img/_culture/crop/Julie-Dinh.jpg">
-          <p class="articletopic">Fashion</p>
-          <p class="articlename"><i>By Julie Dinh</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Estelle-Vallette.html"><img class="article" alt="" src="img/_culture/crop/Estelle-Vallett.jpg">
-          <p class="articletopic">Theatre</p>
-          <p class="articlename"><i>By Estelle Vallett</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Jacob-Vecchio.html"><img class="article" alt="" src="img/_culture/crop/Jacob-Vecchio.jpg">
-          <p class="articletopic">Design</p>
-          <p class="articlename"><i>By Jacob Vecchio</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Macey-Radburn.html"><img class="article" alt="" src="img/_culture/crop/Macey-Radburn.jpg">
-            <p class="articletopic">Pop Culture</p>
-            <p class="articlename"><i>By Macey Radburn</i></p>
-          </a>
-        </div>
-        <div class="large-4 medium-4 small-12">
-          <a href="Culture-Aaron-de-Leon.html"><img class="article" alt="" src="img/_culture/crop/Aaron-de-Leon.jpg">
-          <p class="articletopic">Technology</p>
-          <p class="articlename"><i>By Aaron de Leon</i></p>
-          </a>
-        </div>
-      </div> <!-- end of 8 col -->
-      </section>
+		</div>
+	</section>
 
     
   </div>
