--- a/People.html
+++ b/People.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="js/vendor/modernizr.js"></script>
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" href="img/bookmark-logoa.png"/>
     <link rel="apple-touch-icon-precomposed" href="img/bookmark-logo.png"/>
   </head>
   
