--- a/culture.html
+++ b/culture.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="js/vendor/modernizr.js"></script>
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" href="img/bookmark-logoa.png"/>
     <link rel="apple-touch-icon-precomposed" href="img/bookmark-logo.png"/>
   </head>
   
   <body>
-    <!-- <img src="img/bg.jpg" class="bg" alt=""> -->
     <div class="off-canvas-wrap">
     <div class="inner-wrap">
       <nav class="tab-bar">
